fix alignment

--- a/public/style.css
+++ b/public/style.css
@@ -39,32 +39,7 @@ button {
     margin-left: 10px;
 }
 
-.online {
-    height: 100vh;
-    width: 300px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    background-color: rgb(110, 103, 103);
-}
 
-.online .users-online {
-    background-color: rgb(110, 103, 103);
-    color: white;
-    text-align: center;
-    font-size: 40px;
-    font-weight: bolder;
-}
-
-.users {
-    margin-left: 40px;
-    margin-top: 50px;
-}
-
-.users p {
-    background-color: rgb(110, 103, 103);
-    color: white;
-}
 
 ::placeholder {
     font-weight: 700;
@@ -76,4 +51,13 @@ button {
   height: auto;
   padding: 10px;
   font-size: 16px;
+}
+
+.cta-item {
+    display: flex;
+    flex-direction: column;
+ }
+ 
+.bottom-aligned {
+    margin-top: auto;
 }
